# boggle

./: .gitignore  Cargo.toml  README.md  dice.txt
src/: lib.rs  serde.rs  tests.rs
src/file/: gio.rs  mod.rs  stdio.rs
src/io/: gio.rs  mod.rs
