[package]
name = "boggle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "1.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
gio = { version = "0.14", optional = true }
glib = { version = "0.14", optional = true }
futures = { version = "0.3", optional = true }

[features]
gio1 = ["glib", "gio", "futures"]
cli = []

[[bin]]
name = "boggle-cli"
required-features = ["cli"]
